[package]
name = "bittravel"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["full"] }
spacetimedb-sdk = "1.0"
spacetimedb-lib = "1.0"
hex = "0.4"
image = "0.25.6"
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
hexx = { version = "*", features = [
    "serde",
    "bevy",
    "bevy_platform",
    "bevy_reflect",
    "grid",
    "algorithms",
] }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
log4rs = "1.3.0"
itertools = "0.14.0"
phf = { version = "0.12", features = ["macros"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
